@@ -1,3 +1,13 @@
+Sun Nov 15 22:49:35 GMT 2009  Colin Watson  <cjwatson@debian.org>
+
+	* README (Non-generic arguments to configure): Use more readable
+	  formatting.
+	* manual/options-only.me, manual/print-options: New file.
+	* manual/intro.me (Arguments to configure): Add hooks for
+	  options-only.me.
+	* manual/Makefile.am (dist_noinst_DATA): Add options-only.me and
+	  print-options.
+
 Sun Nov 15 16:15:56 GMT 2009  Colin Watson  <cjwatson@debian.org>
 
 	* docs/HACKING (Revision control): Savannah has disabled bzr+ssh for
